--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Testimonial Grid</title>
 </head>
 <body>
-    
+    <main>
+        <div class="container">
+            <div class="testimonial item-1"></div>
+            <div class="testimonial item-2"></div>
+            <div class="testimonial item-3"></div>
+            <div class="testimonial item-4"></div>
+            <div class="testimonial item-5"></div>
+        </div>
+    </main>
 </body>
 </html>
